--- a/package.json
+++ b/package.json
@@ -3,25 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.25.4",
-    "hint": "^6.1.10",
-    "lodash": "^4.17.21",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "repository": {
@@ -34,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/L2oukmane/To-Do-List/issues"
   },
-  "homepage": "https://github.com/L2oukmane/To-Do-List#readme"
+  "homepage": "https://github.com/L2oukmane/To-Do-List#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "hint": "^6.1.10",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
