--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "To-Do-List",
+  "name": "to-do-list",
   "version": "1.0.0",
-  "description": "",
+  "description": "> This simple project being built in our second module of our curriculum at microverse. its a is To Do List were you are able to: add, remove, marke as completed and clear all completed notes from the To Do list.\r > Our goal here is to Build a simple interactive To Do List app from scratch using JavaScript.",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/L2oukmane/To-Do-List#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-import": "^2.25.4",
     "hint": "^6.1.10",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -36,5 +38,6 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
-  }
+  },
+  "main": "webpack.config.js"
 }
